--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
   "author": "Luis Pagliaro",
   "license": "ISC",
   "devDependencies": {
+    "angular": "^1.5.5",
+    "angular-route": "^1.5.5",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
+    "bootstrap": "^3.3.6",
+    "browserify": "^13.0.1",
     "express": "^4.13.4",
+    "font-awesome": "^4.6.1",
     "jsonwebtoken": "^6.2.0",
     "mongodb": "^2.1.16",
     "mongoose": "^4.4.13",
     "morgan": "^1.7.0"
   },
   "dependencies": {
+    "angular-animate": "^1.5.5",
+    "gulp": "^3.9.1",
     "mongoose": "^4.4.13"
   }
 }
