--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "morgan": "^1.7.0"
   },
   "dependencies": {
-    "angular-animate": "^1.5.5",
+    "browser-sync": "^2.12.7",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.2.2",
+    "gulp-nodemon": "^2.0.7",
+    "gulp-notify": "^2.2.0",
+    "gulp-util": "^3.0.7",
     "mongoose": "^4.4.13"
   }
 }
