--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "browserify": "^13.0.1",
     "express": "^4.13.4",
     "font-awesome": "^4.6.1",
+    "gulp-clean-css": "^2.0.7",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.1",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.3",
+    "jshint": "^2.9.2",
     "jsonwebtoken": "^6.2.0",
     "mongodb": "^2.1.16",
     "mongoose": "^4.4.13",
