--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "browserify": "^13.0.1",
     "express": "^4.13.4",
     "font-awesome": "^4.6.1",
+    "gulp-angular-filesort": "^1.1.1",
     "gulp-clean-css": "^2.0.7",
     "gulp-concat": "^2.6.0",
+    "gulp-inject": "^4.0.0",
     "gulp-jshint": "^2.0.1",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-rename": "^1.2.2",
@@ -28,7 +30,8 @@
     "jsonwebtoken": "^6.2.0",
     "mongodb": "^2.1.16",
     "mongoose": "^4.4.13",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "stream-series": "^0.1.1"
   },
   "dependencies": {
     "browser-sync": "^2.12.7",
